Update download link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li>It is only for Android users.</li>
           <li>The star icon only appears to you.</li>
         </ul>
-        <a class="dlBtn" href="#">Download from Github</a>
+        <a class="dlBtn" href="https://github.com/nkruski/tg/releases/tag/telegram">Download from Github</a>
         <p class="donateAddr">
           Donate BTC:
           <span class="donateAddrHash">bc1qejamc3pzxgsc2wjw5ej6ekynkf89tdzaguvtmq</span>
